fix wrong font being used on svgChart

--- a/src/components/svgChart/svgChart.css
+++ b/src/components/svgChart/svgChart.css
@@ -1,36 +1,38 @@
-.st0 {
+.chart-top-st0 {
   fill: none;
   stroke: #FFFFFF;
   stroke-width: 2;
   stroke-miterlimit: 10;
 }
-.st1 {
+.chart-top-st1 {
   fill: #A6DFA1
 }
-.st2 {
-  font-family: brandon_grotesquebold
+.chart-top-st2,
+.chart-top-st2 tspan {
+  font-family: brandon_grotesquebold;
 }
-.st3 {
+.chart-top-st3 {
   font-size: 12.1389px
 }
-.st4 {
+.chart-top-st4 {
   fill: #FFFFFF
 }
-.st5 {
-  font-family: brandon_grotesque_regularRg
+.chart-top-st5,
+.chart-top-st5 tspan {
+  font-family: brandon_grotesque_regularRg;
 }
-.st6 {
+.chart-top-st6 {
   font-size: 8.0926px
 }
-.st7 {
+.chart-top-st7 {
   fill: #E682BA
 }
-.st8 { 
+.chart-top-st8 { 
   fill: #DE9CFC
 }
-.st9 {
+.chart-top-st9 {
   font-size: 9px
 }
-.st10 {
+.chart-top-st10 {
   font-size: 13.7522px
 }
